--- a/releng/syslinux/archiso_sys.cfg
+++ b/releng/syslinux/archiso_sys.cfg
@@ -8,7 +8,7 @@ ENDTEXT
 MENU LABEL Boot Arch Linux (x86_64)
 LINUX boot/x86_64/vmlinuz
 INITRD boot/intel_ucode.img,boot/amd_ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+APPEND copytoram= y archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
 
 
 INCLUDE boot/syslinux/archiso_tail.cfg
