--- a/releng/airootfs/etc/systemd/system/prepare-salt-minion.service
+++ b/releng/airootfs/etc/systemd/system/prepare-salt-minion.service
@@ -4,7 +4,8 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/bash -c "git clone https://github.com/tqre/archlive-saltminion /tmp/minion"
+ExecStartPre=/usr/bin/bash -c "git clone https://github.com/tqre/archlive-saltminion /tmp/minion"
+ExecStart=/usr/bin/bash -c "/tmp/minion/minion_init.sh"
 
 [Install]
 WantedBy=multi-user.target
